Dia 2/hello-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-app-deployment
  labels:
    app: hello-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello-app
  template:
    metadata:
      labels:
        app: hello-app
    spec:
      containers:
      - name: nginx
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-novo
        livenessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        readinessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html
      volumes:
        - name: nginx-html
          secret:
            secretName: nginx-secret-envvars
