Dia 2/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
#      nodeSelector:
#        kubernetes.io/hostname: gke-cluster-0-default-pool-3e030478-9mst
#      tolerations:
#        - key: machine-type
#          value: gpu
#          effect: NoSchedule
      containers:
      - name: nginx
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 20m

        ports:
        - containerPort: 8080
          name: http-novo
        livenessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        readinessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        volumeMounts:
          - name: nginx-html
            mountPath: /usr/share/nginx/html

      volumes:
        - name: nginx-html
          secret:
            secretName: nginx-secret-envvars
        - name: nginx-volume-persistente
          persistentVolumeClaim:
            claimName: nginx-pvc
