Dia 2/nginx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nginx-statefulset
  labels:
    app: nginx
spec:
  replicas: 3
  serviceName: nginx-service-statefulset
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: gcr.io/google-samples/hello-app:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-novo
        livenessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        readinessProbe:
          httpGet:
            port: http-novo
            path: /
            scheme: HTTP
        volumeMounts:
          - name: nginx-pvc
            mountPath: /tmp/nginx

  volumeClaimTemplates:
  - metadata:
      name: nginx-pvc
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
      storageClassName: standard
