Dia 2/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-app-ingress
  labels:
    app: hello-app
spec:
  rules:
    - host: hello-app.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nginx-service
              servicePort: http
          - path: /login
            backend:
              serviceName: hello-app-service
              servicePort: http
